# pico.dice

./: .gitignore  CMakeLists.txt  dice.c
